Primer input de login

--- a/MyApp/src/app/login/login.component.html
+++ b/MyApp/src/app/login/login.component.html
@@ -1,7 +1,6 @@
 <div class="Login">
-    <mat-form-field appearance="fill">
-        <mat-label>Enter your email</mat-label>
-        <input matInput placeholder="pat@example.com" [formControl]="email" required>
-        <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+    <mat-form-field class="example-full-width">
+        <mat-label>Favorite food</mat-label>
+        <input matInput placeholder="Ex. Pizza" value="Sushi">
       </mat-form-field>
 </div>
