Vista crear publicación creada

--- a/MyApp/src/app/app.component.html
+++ b/MyApp/src/app/app.component.html
@@ -1,3 +1,5 @@
 <!--<app-login></app-login>-->
-<app-registro></app-registro>
+<!--<app-registro></app-registro>-->
+<!--<app-menu-desplegable></app-menu-desplegable>-->
+<app-crear-publicacion></app-crear-publicacion>
 
