--- a/MyApp/src/app/registro/registro.component.css
+++ b/MyApp/src/app/registro/registro.component.css
@@ -23,8 +23,7 @@ h1{
     width: 25%;
     text-align: center;
     padding: 10px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 70%;
     margin-top: 2%;
     background-color: #EBEDEF ;
     border: 2px;
