--- a/MyApp/src/app/registro/registro.component.html
+++ b/MyApp/src/app/registro/registro.component.html
@@ -22,6 +22,19 @@
             <input matInput placeholder="Ex. juan123@gamil.com">
         </mat-form-field>
         <br>
+        <mat-form-field appearance="fill">
+            <mat-label>Tipo de documento</mat-label>
+            <mat-select ([formControl])="toppings" multiple>
+                <mat-select-trigger>
+                    {{toppings.value ? toppings.value[0] : ''}}
+                        <span *ngIf="toppings.value?.length > 1" class="example-additional-selection">
+                        (+{{toppings.value.length - 1}} {{toppings.value?.length === 2 ? 'other' : 'others'}})
+                        </span>
+                </mat-select-trigger>
+                <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
+            </mat-select>
+        </mat-form-field>
+        <br>
         <mat-form-field class="example-full-width">
             <mat-label>Numero de identificación</mat-label>
             <input matInput placeholder="Ex. 123456789">
