Creacion vista home, models, service y enviroment

--- a/MyApp/src/app/app.component.html
+++ b/MyApp/src/app/app.component.html
@@ -1,5 +1,1 @@
-<!--<app-login></app-login>-->
-<!--<app-registro></app-registro>-->
-<!--<app-menu-desplegable></app-menu-desplegable>-->
-<app-crear-publicacion></app-crear-publicacion>
-
+<router-outlet></router-outlet>
