Ajuste de responsive en vistas, nueva vista creada

--- a/MyApp/src/app/crear-publicacion/crear-publicacion.component.html
+++ b/MyApp/src/app/crear-publicacion/crear-publicacion.component.html
@@ -2,10 +2,9 @@
 <app-menu-desplegable>
     <div class="general">
         <div class="titulo">
-            <h2>Realizar publicación</h2>
+            <h1>Realizar publicación</h1>
         </div>
         <div class="publicacion">
-
             <mat-form-field appearance="fill">
                 <mat-label>Selecciona la categoría</mat-label>
                 <mat-select disableRipple>
@@ -21,13 +20,13 @@
             <br>
             <h3>Añade una imagen a tu publicación</h3>
             <div class="example-button-container">
-                <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
+                <button mat-fab color="accent" aria-label="Example icon button with a delete icon">
                   <mat-icon>add</mat-icon>
                 </button>
             </div>
             <br>
-            <button mat-raised-button color="primary" [style]="{'margin':'10px'}">Atrás</button>
-            <button mat-raised-button color="primary">Publicar</button>
+            <button mat-raised-button color="accent" [style]="{'margin':'10px'}">Atrás</button>
+            <button mat-raised-button color="accent">Publicar</button>
 
         </div>
     </div>
