--- a/MyApp/src/app/home/home.component.html
+++ b/MyApp/src/app/home/home.component.html
@@ -2,7 +2,6 @@
 <div class="general">
     <div class="cabecera">
         <h1>Socigence App</h1>
-        <!--<mat-icon aria-hidden="false" class="iconoTitulo">group</mat-icon>-->
     </div>
     <br>
 
@@ -12,6 +11,7 @@
             de Engativá. Desde descuentos en diversas tiendas hasta promociones para tus restaurantes favoritos, 
             tu aporte estará al alcance de una foto :).</p>
         <p class="aviso">!Ven y sé parte de un nuevo comienzo!</p>
+        <img src="https://techcrunch.com/wp-content/uploads/2015/04/codecode.jpg" height="200px" width="300px" class="picture">
     </div>
     <br>
     <div class="Menu">
