--- a/MyApp/src/app/login/login.component.html
+++ b/MyApp/src/app/login/login.component.html
@@ -21,6 +21,25 @@
             </button>
         </mat-form-field>
         <br>
-        <button mat-raised-button color="primary">Iniciar sesión</button>
+        <button mat-raised-button color="accent" style="margin: 5px;" [routerLink]="['/home']">Atrás</button>
+        <button mat-raised-button color="accent" [routerLink]="['/home']">Iniciar sesión</button>
+    </div>
+    <br>
+    <div class="banner">
+        <div class="hijo">
+            Valentina Calderon
+            <br>
+            Ingeniería de Sistemas
+        </div>
+        <div class="hijo">
+            Jhon Jairo Ballen
+            <br>
+            Ingeniería de Sistemas
+        </div>
+        <div class="hijo">
+            Juan Felipe Peña
+            <br>
+            Ingeniería de Sistemas
+        </div>
     </div>
 </div>
