--- a/MyApp/src/app/menu-desplegable/menu-desplegable.component.html
+++ b/MyApp/src/app/menu-desplegable/menu-desplegable.component.html
@@ -11,9 +11,9 @@
         <mat-nav-list>
             <a mat-list-item routerLink="/home"> <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon> Home</a>
             <a mat-list-item routerLink="/login"> <span class="material-icons">mood</span> Ver retos </a>
-            <a mat-list-item routerLink="/registrarUsuario"> <span class="material-icons">border_color</span> Realizar publicación </a>
-            <a mat-list-item routerLink="/registrarUsuario"> <span class="material-icons">search</span> Ver publicaciones </a>
-            <a mat-list-item routerLink="/registrarUsuario"> <span class="material-icons">grade</span> Reclamar premio </a>
+            <a mat-list-item routerLink="/crearPublicacion"> <span class="material-icons">border_color</span> Realizar publicación </a>
+            <a mat-list-item routerLink="/publicaciones"> <span class="material-icons">search</span> Ver publicaciones </a>
+            <a mat-list-item routerLink="/home"> <span class="material-icons">grade</span> Reclamar premio </a>
             
         </mat-nav-list>
       </mat-sidenav>
