--- a/MyApp/src/app/home/home.component.css
+++ b/MyApp/src/app/home/home.component.css
@@ -30,6 +30,12 @@ h1{
     border-radius: 5px;
 }
 
+.picture{
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
 .texto{
     font-family: Arial, Helvetica, sans-serif;
 }
