--- a/MyApp/src/app/login/login.component.css
+++ b/MyApp/src/app/login/login.component.css
@@ -16,7 +16,8 @@
 h1{
     font-family: fantasy;
     font-size: 70px;
-    color: blue;
+    color: #2E86C1;
+    text-align: center;
 }
 
 .Login{
@@ -32,8 +33,22 @@ h1{
 }
 
 h2{
-    font-family: Comic Sans MS, Comic Sans, cursive;
-    color: #34495E;
+    text-align: center;
+    color: #1ABC9C;
+}
+
+.banner{
+    height: 27%;
+    padding: 10px;
+    text-align: center;
+    background-color: #D4E6F1;
+    margin-top: 4%;
+}
+
+.hijo{
+    padding: 10px;
+    margin: 60px;
+    display: inline-block;
 }
 
 @media only screen and (max-width: 840px){
@@ -53,6 +68,17 @@ h2{
         margin-left: auto;
         margin-right: auto;
         margin-top: 10%;
+    }
+
+    .banner{
+        width: 100%;
+        text-align: center;
+    }
+
+    .hijo{
+        padding: 3px;
+        display: inline-block;
+        margin: 5px;
     }
 
 
