--- a/MyApp/src/app/registro/registro.component.html
+++ b/MyApp/src/app/registro/registro.component.html
@@ -24,14 +24,10 @@
         <br>
         <mat-form-field appearance="fill">
             <mat-label>Tipo de documento</mat-label>
-            <mat-select ([formControl])="toppings" multiple>
-                <mat-select-trigger>
-                    {{toppings.value ? toppings.value[0] : ''}}
-                        <span *ngIf="toppings.value?.length > 1" class="example-additional-selection">
-                        (+{{toppings.value.length - 1}} {{toppings.value?.length === 2 ? 'other' : 'others'}})
-                        </span>
-                </mat-select-trigger>
-                <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
+            <mat-select disableRipple>
+              <mat-option value="1">Cédula de ciudadanía</mat-option>
+              <mat-option value="2">Tarjeta de identidad</mat-option>
+              <mat-option value="3">Cédula de extranjería</mat-option>
             </mat-select>
         </mat-form-field>
         <br>
@@ -61,7 +57,8 @@
             </button>
         </mat-form-field>
         <br>
-        <button mat-raised-button color="primary">Regístrate</button>
+        <button mat-raised-button color="accent" style="margin: 5px;" [routerLink]="['/home']">Atrás</button>
+        <button mat-raised-button color="accent" [routerLink]="['/home']">Regístrate</button>
     </div>
 </div>
 
