--- a/MyApp/src/app/ver-publicaciones/ver-publicaciones.component.css
+++ b/MyApp/src/app/ver-publicaciones/ver-publicaciones.component.css
@@ -15,18 +15,18 @@ h1{
     margin-top: 2%;
 }
 
-.publicacion{
-    text-align: center;
-}
-
-.editor{
-    width: 60%;
+.example-card {
+    max-width: 400px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 1%;
-    margin-bottom: 1%;
-    border:#2E86C1 1px solid;
+    border: #2E86C1 solid 1px;
 }
+  
+.example-header-image {
+    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+    background-size: cover;
+}
+
 
 @media only screen and (max-width: 840px){
     .general{
@@ -41,12 +41,8 @@ h1{
         font-size: 40px;
     }
 
-    .editor{
-        width: 90%;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 1%;
-        margin-bottom: 1%;
-        border:#3D60B6 2px solid;
+    .example-card {
+        max-width: 320px;
     }
 }
+
