Responsive ultima vista creada

--- a/MyApp/src/app/crear-publicacion/crear-publicacion.component.html
+++ b/MyApp/src/app/crear-publicacion/crear-publicacion.component.html
@@ -25,8 +25,8 @@
                 </button>
             </div>
             <br>
-            <button mat-raised-button color="accent" [style]="{'margin':'10px'}">Atrás</button>
-            <button mat-raised-button color="accent">Publicar</button>
+            <button mat-raised-button color="accent" [style]="{'margin':'10px'}" [routerLink]="['/publicaciones']">Atrás</button>
+            <button mat-raised-button color="accent" [routerLink]="['/publicaciones']">Publicar</button>
 
         </div>
     </div>
