--- a/MyApp/src/app/home/home.component.html
+++ b/MyApp/src/app/home/home.component.html
@@ -11,7 +11,7 @@
             de Engativá. Desde descuentos en diversas tiendas hasta promociones para tus restaurantes favoritos, 
             tu aporte estará al alcance de una foto :).</p>
         <p class="aviso">!Ven y sé parte de un nuevo comienzo!</p>
-        <img src="https://techcrunch.com/wp-content/uploads/2015/04/codecode.jpg" height="200px" width="300px" class="picture">
+        <img src="https://github.com/Socigence-App/FrontEndSocigenceApp/blob/main/MyApp/src/app/pictures/Captura%20de%20pantalla%202021-02-14%20185554.png?raw=true" height="200px" width="300px" class="picture">
     </div>
     <br>
     <div class="Menu">
