--- a/MyApp/src/app/registro/registro.component.html
+++ b/MyApp/src/app/registro/registro.component.html
@@ -58,7 +58,7 @@
         </mat-form-field>
         <br>
         <button mat-raised-button color="accent" style="margin: 5px;" [routerLink]="['/home']">Atrás</button>
-        <button mat-raised-button color="accent" [routerLink]="['/home']">Regístrate</button>
+        <button mat-raised-button color="accent" [routerLink]="['/publicaciones']">Regístrate</button>
     </div>
 </div>
 
