--- a/MyApp/src/app/ver-publicaciones/ver-publicaciones.component.html
+++ b/MyApp/src/app/ver-publicaciones/ver-publicaciones.component.html
@@ -29,3 +29,5 @@
         </div>
     </div>
 </app-menu-desplegable>
+<button mat-raised-button color="accent" [routerLink]="['/crearCategoria']" >Crear Categoria</button>
+<button mat-raised-button color="accent" [routerLink]="['/crearPublicacion']" >Crear publicacion</button>
