--- a/MyApp/src/app/login/login.component.html
+++ b/MyApp/src/app/login/login.component.html
@@ -22,7 +22,7 @@
         </mat-form-field>
         <br>
         <button mat-raised-button color="accent" style="margin: 5px;" [routerLink]="['/home']">Atrás</button>
-        <button mat-raised-button color="accent" [routerLink]="['/publicaciones']" (click)="loguear()">Iniciar sesión</button>
+        <button mat-raised-button color="accent" [routerLink]="link" (click)="loguear()">Iniciar sesión</button>
     </div>
     <br>
     <div class="banner">
