Creacion y vista de publicaciones hecha

--- a/MyApp/src/app/perfil-admi/perfil-admi.component.html
+++ b/MyApp/src/app/perfil-admi/perfil-admi.component.html
@@ -28,7 +28,7 @@
                Ver usuarios
             </div>
             <div class="opcion2">
-                <button mat-mini-fab color="accent" aria-label="Example icon button with a delete icon" [routerLink]="['/crearPublicacion']">
+                <button mat-mini-fab color="accent" aria-label="Example icon button with a delete icon" [routerLink]="['/publicaciones']">
                     <mat-icon>add</mat-icon>
                 </button>
                 Ver publicaciones
