--- a/MyApp/src/app/registro/registro.component.html
+++ b/MyApp/src/app/registro/registro.component.html
@@ -23,7 +23,7 @@
         </mat-form-field>
         <br>
         <div class="listboxDocumento">
-            <p-listbox [options]="tipoDoc" [(ngModel)]="nuevoUsuario.IdTipo" optionLabel="nombre" [style]="{'width':'15rem'}"></p-listbox>
+            <p-listbox [options]="tipoDoc" [(ngModel)]="nuevoUsuario.IdTipo" optionLabel="nombre" [style]="{'width':'15rem'}">Cedula</p-listbox>
         </div>
         <br>
         <mat-form-field class="example-full-width">
