--- a/MyApp/src/app/categoria/categoria.component.html
+++ b/MyApp/src/app/categoria/categoria.component.html
@@ -1,18 +1,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <div class="general">
         <div class="contenido">
-            <mat-card-header>
-                <div mat-card-avatar class="example-header-image"></div>
-                <mat-card-title>{{post.titulo}}</mat-card-title>
-                <mat-card-subtitle>{{post['categoria'] | json}}</mat-card-subtitle>
-              </mat-card-header>
-              <mat-card-content>
-                <div [innerHtml]="post.descripcion"></div>
-              </mat-card-content>
-              <mat-card-actions>
-                <button mat-raised-button color="accent">LIKE</button>
-                <button mat-raised-button color="primary">SHARE</button>
-              </mat-card-actions>
-          </mat-card>
+            <div class="tarjeta">
+                <h3>{{categoria.nombre}}</h3>
+                <div [innerHtml]="categoria.descripcion"></div>
+                <button mat-raised-button color="accent" [style]="{'margin':'10px'}">Eliminar</button>
+                <button mat-raised-button color="primary">Editar</button>
+            </div>
         </div>
     </div>
