--- a/MyApp/src/app/menu-desplegable-admi/menu-desplegable-admi.component.html
+++ b/MyApp/src/app/menu-desplegable-admi/menu-desplegable-admi.component.html
@@ -9,11 +9,11 @@
       <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
                    [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
         <mat-nav-list>
-            <a mat-list-item routerLink="/home"> <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon> Home</a>
-            <a mat-list-item routerLink="/login"> <span class="material-icons">mood</span> Ver retos </a>
-            <a mat-list-item routerLink="/crearPublicacion"> <span class="material-icons">border_color</span> Realizar publicación </a>
-            <a mat-list-item routerLink="/publicaciones"> <span class="material-icons">search</span> Ver publicaciones </a>
-            <a mat-list-item routerLink="/home"> <span class="material-icons">grade</span> Reclamar premio </a>
+            <a mat-list-item routerLink="/publicaciones"> <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon> Ver publicaciones</a>
+            <a mat-list-item routerLink="/categorias"> <span class="material-icons">mood</span> Ver categorias </a>
+            <a mat-list-item routerLink="/crearPublicacion"> <span class="material-icons">border_color</span> Ver retos </a>
+            <a mat-list-item routerLink="/perfilAdmi"> <span class="material-icons">search</span> Perfil </a>
+            <a mat-list-item routerLink="/home"> <span class="material-icons">grade</span> PENDIENTE </a>
             
         </mat-nav-list>
       </mat-sidenav>
