--- a/MyApp/src/app/usuario/usuario.component.html
+++ b/MyApp/src/app/usuario/usuario.component.html
@@ -2,12 +2,10 @@
     <div class="general">
         <div class="contenido">
             <div class="tarjeta">
-                <h3>{{reto.titulo}}</h3>
-                <p>{{reto['user'] | json}}</p>
-                <p>{{reto['categoria'] | json}}</p>
-                <div [innerHtml]="reto.descripcion"></div>
+                <h3>holi</h3>
                 <button mat-raised-button color="accent" [style]="{'margin':'10px'}">Eliminar</button>
                 <button mat-raised-button color="primary">Editar</button>
             </div>
         </div>
     </div>
+
