--- a/MyApp/src/app/ver-usuarios/ver-usuarios.component.html
+++ b/MyApp/src/app/ver-usuarios/ver-usuarios.component.html
@@ -2,11 +2,12 @@
 <app-menu-desplegable-admi>
     <div class="general">
         <div class="titulo">
-            <h1>Categorias</h1>
+            <h1>Lista de Usuarios</h1>
         </div>
         <br>
-        <div *ngFor= 'let categoria of categorias'>
-          <app-categoria [categoria]="categoria"></app-categoria>
+        <div *ngFor= 'let usuario of usuarios'>
+          <app-usuario [usuario]="usuario"></app-usuario>
         </div>
     </div>
 </app-menu-desplegable-admi>
+
