Eliminar y crear retos con exito

--- a/MyApp/src/app/menu-desplegable-admi/menu-desplegable-admi.component.html
+++ b/MyApp/src/app/menu-desplegable-admi/menu-desplegable-admi.component.html
@@ -11,7 +11,7 @@
         <mat-nav-list>
             <a mat-list-item routerLink="/publicaciones"> <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon> Ver publicaciones</a>
             <a mat-list-item routerLink="/categorias"> <span class="material-icons">mood</span> Ver categorias </a>
-            <a mat-list-item routerLink="/retos"> <span class="material-icons">border_color</span> Ver retos </a>
+            <a mat-list-item routerLink="/verRetos"> <span class="material-icons">border_color</span> Ver retos </a>
             <a mat-list-item routerLink="/perfilAdmi"> <span class="material-icons">search</span> Perfil </a>
             <a mat-list-item routerLink="/home"> <span class="material-icons">grade</span> PENDIENTE </a>
             
