--- a/MyApp/src/app/registro/registro.component.html
+++ b/MyApp/src/app/registro/registro.component.html
@@ -57,7 +57,7 @@
             </div>
         </div>
         <button mat-raised-button color="accent" style="margin: 5px;" [routerLink]="['/home']">Atrás</button>
-        <button mat-raised-button color="accent" [routerLink]="['/publicaciones']" (click)="crearUsuario()">Regístrate</button>
+        <button mat-raised-button color="accent" [routerLink]="['/login']" (click)="crearUsuario()">Regístrate</button>
     </div>
 </div>
 
