--- a/MyApp/src/app/usuario/usuario.component.html
+++ b/MyApp/src/app/usuario/usuario.component.html
@@ -2,7 +2,7 @@
     <div class="general">
         <div class="contenido">
             <div class="tarjeta">
-                <h3>holi</h3>
+                <h3>{{usuario.nombre}}</h3>
                 <button mat-raised-button color="accent" [style]="{'margin':'10px'}">Eliminar</button>
                 <button mat-raised-button color="primary">Editar</button>
             </div>
