Eliminar usuarios, categorias hecho

--- a/MyApp/src/app/categoria/categoria.component.html
+++ b/MyApp/src/app/categoria/categoria.component.html
@@ -4,7 +4,7 @@
             <div class="tarjeta">
                 <h3>{{categoria.nombre}}</h3>
                 <div [innerHtml]="categoria.descripcion"></div>
-                <button mat-raised-button color="accent" [style]="{'margin':'10px'}">Eliminar</button>
+                <button mat-raised-button color="accent" [style]="{'margin':'10px'}" (click)="eliminarCategoria()" [routerLink]="['/perfilAdmi']">Eliminar</button>
                 <button mat-raised-button color="primary">Editar</button>
             </div>
         </div>
