--- a/MyApp/src/app/perfil-admi/perfil-admi.component.html
+++ b/MyApp/src/app/perfil-admi/perfil-admi.component.html
@@ -22,7 +22,7 @@
         <div class="opciones">
             <h3>¿Que quieres hacer?</h3>
             <div class="opcion1">
-                <button mat-mini-fab color="accent" aria-label="Example icon button with a delete icon">
+                <button mat-mini-fab color="accent" aria-label="Example icon button with a delete icon" [routerLink]="['/usuarios']">
                     <mat-icon>add</mat-icon>
                 </button>
                Ver usuarios
