--- a/MyApp/src/app/usuario/usuario.component.css
+++ b/MyApp/src/app/usuario/usuario.component.css
@@ -7,6 +7,7 @@
     height: 100%;
 }
 
+
 .tarjeta{
     border: solid blue 2px;
     width: 70%;
@@ -15,6 +16,7 @@
     padding: 10px;
     text-align: center;
     border-radius: 5px;
+    margin-top: 3%;
 
 }
 
@@ -22,6 +24,12 @@ h3{
     font-family: fantasy;
     font-size: 25px;
     color: #1ABC9C;
+}
+
+h4{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 25px;
+    color: #A569BD;
 }
   
 
