--- a/MyApp/src/app/publicacion/publicacion.component.html
+++ b/MyApp/src/app/publicacion/publicacion.component.html
@@ -5,8 +5,8 @@
                 <mat-card-header>
                   <div mat-card-avatar class="example-header-image"></div>
                   <mat-card-title>{{post.titulo}}</mat-card-title>
-                  <mat-card-subtitle>{{post['categoria'] | json}}</mat-card-subtitle>
-                  <mat-card-subtitle>{{post['user'] | json}}</mat-card-subtitle>
+                  <mat-card-subtitle>{{post.categoria.nombre}}</mat-card-subtitle>
+                  <mat-card-subtitle>{{post.user.username}}</mat-card-subtitle>
                 </mat-card-header>
                 <mat-card-content>
                   <div [innerHtml]="post.descripcion"></div>
