Correccion de errores

--- a/MyApp/src/app/crear-publicacion/crear-publicacion.component.html
+++ b/MyApp/src/app/crear-publicacion/crear-publicacion.component.html
@@ -23,7 +23,7 @@
             </div>
             <br>
             <button mat-raised-button color="accent" [style]="{'margin':'10px'}" [routerLink]="['/publicaciones']">Atrás</button>
-            <button mat-raised-button color="accent" [routerLink]="['/publicaciones']" (click)="crearPost()">Publicar</button>
+            <button mat-raised-button color="accent" [routerLink]="['/perfil']" (click)="crearPost()">Publicar</button>
 
         </div>
     </div>
