--- a/MyApp/src/app/usuario/usuario.component.html
+++ b/MyApp/src/app/usuario/usuario.component.html
@@ -3,16 +3,18 @@
         <div class="contenido">
             <div class="tarjeta">
                 <h3>{{usuario.nombre}}</h3>
-                <p>Nombre de usuario: {{usuario.username}}</p>
-                <p>Correo: {{usuario.email}}</p>
-                <p>Tipo de identificacion: {{usuario.IdTipo}}</p>
-                <p>Numero: {{usuario.IdNumero}}</p>
-                <p>Telefono: {{usuario.Telefono}}</p>
-                <p>Contraseña: {{usuario.contrasena}}</p>
-                <p>Tipo de usuario: {{usuario.usertipo}}</p>
+                <p> <b>Nombre de usuario:</b> {{usuario.username}}</p>
+                <p> <b>Correo:</b> {{usuario.email}}</p>
+                <p> <b>Tipo de identificacion:</b> {{usuario.IdTipo}}</p>
+                <p> <b>Numero:</b> {{usuario.IdNumero}}</p>
+                <p> <b>Telefono:</b> {{usuario.Telefono}}</p>
+                <p> <b>Contraseña:</b> {{usuario.contrasena}}</p>
+                <p> <b>Tipo de usuario:</b>  {{usuario.usertipo}}</p>
                 <button mat-raised-button color="accent" [style]="{'margin':'10px'}" (click)="eliminarUsuario()" [routerLink]="['/perfilAdmi']">Eliminar</button>
                 <button mat-raised-button color="primary">Editar</button>
             </div>
         </div>
     </div>
+
+    
 
