correccion errores menu desplegable

--- a/MyApp/src/app/crear-publicacion/crear-publicacion.component.html
+++ b/MyApp/src/app/crear-publicacion/crear-publicacion.component.html
@@ -22,7 +22,7 @@
             <p-editor [(ngModel)]="newPost.descripcion" [style]="{'height':'150px'}"></p-editor>
             </div>
             <br>
-            <button mat-raised-button color="accent" [style]="{'margin':'10px'}" [routerLink]="['/publicaciones']">Atrás</button>
+            <button mat-raised-button color="accent" [style]="{'margin':'10px'}" [routerLink]="['/perfil']">Atrás</button>
             <button mat-raised-button color="accent" [routerLink]="['/perfil']" (click)="crearPost()">Publicar</button>
 
         </div>
